--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,17 @@ body {
   align-items: center;
 }
 
+.filter-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 30px 5px 50px;
+  width: 80%;
+  margin: 10px 0px 10px 20px;
+  
+}
+
 .main-panel{
  top: 0;
  padding-left: 250px;
@@ -28,14 +39,14 @@ body {
 
 .result-area{
  
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 
 .stat-item{
-  background-color: #42afde;
-  opacity: 0.7;
+  background-color: #0d98d4;
+  opacity: 0.8;
   margin-left: 10px;
   padding: 2px 5px;
   border-radius: 15px;
@@ -51,7 +62,8 @@ body {
 }
 
 .header h1{
-  color: rgb(60, 54, 54);
+  color: rgb(32, 32, 32);
+  font-size: 50px;
 }
 
 .result-area table{
@@ -84,4 +96,23 @@ body {
 .result-area tr:nth-child(odd) {
   background-color: #383837;
   opacity: 0.8;
+}
+
+.unemployment-slider{
+       font-weight: bolder;
+       color: #171717;
+}
+
+.unemployment-slider output{
+  color: black;
+}
+
+.filter-area input {
+  border-radius: 5px;
+}
+
+.filter-area button{
+  border-radius: 3px;
+  background-color: rgb(219, 163, 43);
+  font-weight: bolder;
 }
