--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  padding: 30px 5px 50px;
+  padding: 30px 5px 50px 100px;
   width: 80%;
   margin: 10px 0px 10px 20px;
   
@@ -34,7 +34,7 @@ body {
 
 .main-panel{
  top: 0;
- padding-left: 250px;
+ padding-left: 50px;
 }
 
 .result-area{
@@ -71,7 +71,7 @@ body {
   border-spacing: 0;
   text-align: center;
   color: white;
-  width: 85% ;
+  width: 60% ;
 }
 
 
@@ -142,4 +142,15 @@ nav{
 
 .home-link:active{
   color: rgb(134, 244, 65);
+}
+
+.details h1{
+  font-family: cursive;
+  font-style: oblique;
+  color: #d2500e;
+}
+
+.details h3{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(47, 47, 47);
 }
